--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
           <img src="img/AventonesLogo.png" alt="Logo" />
         </header>
 
-        <section class="login-form">
+        <form class="login-form" id="login-form">
           <button class="cta-google">
             <img
               class="img-google"
@@ -33,9 +33,9 @@
           </div>
 
           <div class="cta-button">
-            <button onclick="window.location.href='myRides.html'">Login</button>
+            <button type="submit">Login</button>
           </div>
-        </section>
+        </form>
       </div>
     </div>
 
@@ -47,5 +47,7 @@
       <a href="register.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
+
+    <script src="js/login.js"></script>
   </body>
 </html>
