--- a/configuration.html
+++ b/configuration.html
@@ -51,7 +51,7 @@
       <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
       <a href="bookings.html">Bookings</a> |
       <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
-      <a href="register.html">Register</a>
+      <a href="userRegister.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
   </body>
