--- a/driverRegister.html
+++ b/driverRegister.html
@@ -93,7 +93,7 @@
       <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
       <a href="bookings.html">Bookings</a> |
       <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
-      <a href="register.html">Register</a>
+      <a href="userRegister.html">Register</a>
     </nav>
 
     <footer>© Aventones.com</footer>
