--- a/userRegister.html
+++ b/userRegister.html
@@ -16,6 +16,12 @@
         <h2>User Registration</h2>
         <hr />
         <div class="registration-body">
+          <div class="horizontal-form">
+            <div>
+              <label for="user-id">Id</label>
+              <input type="text" id="user-id" />
+            </div>
+          </div>
           <div class="column-form">
             <div>
               <label for="first-name">First Name</label>
@@ -65,6 +71,12 @@
               <input type="text" id="state" />
             </div>
           </div>
+          <div class="horizontal-form">
+            <div>
+              <label for="birthdate">Birthdate</label>
+              <input type="date" id="birthdate" />
+            </div>
+          </div>
 
           <div class="column-form">
             <div>
@@ -80,7 +92,9 @@
         <section class="cta-buttons">
           <div class="cta-buttons-relinks">
             <p>Already an user? <a href="login.html">Login here</a></p>
-            <p>Register as driver? <a href="driverRegister.html">Click here</a></p>
+            <p>
+              Register as driver? <a href="driverRegister.html">Click here</a>
+            </p>
           </div>
           <div class="cta-buttons-sign-up">
             <button type="submit">Sign up</button>
