Se agrego validacion que exige estar logeado para acceder a la pagina

--- a/searchRides.html
+++ b/searchRides.html
@@ -134,5 +134,6 @@
       <a href="userRegister.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
+    <script src="js/sessionGuard.js"></script>
   </body>
 </html>
