--- a/newRide.html
+++ b/newRide.html
@@ -26,7 +26,7 @@
           </label>
           <input type="checkbox" id="toggle-menu" />
           <div class="dropdown-menu">
-            <a href="#" class="submenu-logout">Logout</a>
+            <a onclick="logout()" class="submenu-logout">Logout</a>
             <a href="editProfile.html">Profile</a>
             <a href="configuration.html">Configuration</a>
           </div>
@@ -130,5 +130,6 @@
       <a href="userRegister.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
+    <script src="js/sessionGuard.js"></script>
   </body>
 </html>
