Pagina responsive. Ademas en el .html se modifico la img dentro del table para que fuese responsive

--- a/searchRides.html
+++ b/searchRides.html
@@ -88,7 +88,8 @@
         <tbody>
           <tr>
             <td class="foto-perfil">
-              <img src="img/user-icon.png" alt="" />jrodriguezes
+              <div><img src="img/user-icon.png" alt="" /></div>
+              <div><p>jrodriguez</p></div>
             </td>
             <td><a href="#">Quesada</a></td>
             <td>Alajuela</td>
@@ -99,7 +100,8 @@
           </tr>
           <tr>
             <td class="foto-perfil">
-              <img src="img/user-icon.png" alt="" />jrodriguezes
+              <div><img src="img/user-icon.png" alt="" /></div>
+              <div><p>jrodriguez</p></div>
             </td>
             <td><a href="#">Quesada</a></td>
             <td>Naranjo</td>
@@ -110,7 +112,8 @@
           </tr>
           <tr>
             <td class="foto-perfil">
-              <img src="img/user-icon.png" alt="" />yluna
+              <div><img src="img/user-icon.png" alt="" /></div>
+              <div><p>yluna</p></div>
             </td>
             <td><a href="#">Aguas Zarcas</a></td>
             <td>Naranjo</td>
