Se separo la pagina register en userRegister y driverRegister

--- a/driverRegister.html
+++ b/driverRegister.html
@@ -13,7 +13,7 @@
       </header>
 
       <form class="registration-form" id="registration-form">
-        <h2>User Registration</h2>
+        <h2>Driver Registration</h2>
         <hr />
         <div class="registration-body">
           <div class="horizontal-form">
