--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 
             <label for="login-password">Password</label>
             <input type="password" id="login-password" value="1234567890" />
-            <p>Not an user? <a href="register.html">Register Now</a></p>
+            <p>Not an user? <a href="userRegister.html">Register Now</a></p>
           </div>
 
           <div class="cta-button">
@@ -43,11 +43,12 @@
     <nav>
       <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
       <a href="bookings.html">Bookings</a> |
-      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
+      <a onclick="profileUserType()">Settings</a> | <a href="login.html">Login</a> |
       <a href="userRegister.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
 
     <script src="js/login.js"></script>
+    <script src="js/globalFunctions.js"></script>
   </body>
 </html>
