--- a/newRide.html
+++ b/newRide.html
@@ -126,10 +126,12 @@
     <nav>
       <a href="searchRides.html">Home</a> | <a href="myRides.html">Rides</a> |
       <a href="bookings.html">Bookings</a> |
-      <a href="editProfile.html">Settings</a> | <a href="login.html">Login</a> |
+      <a onclick="profileUserType()">Settings</a> |
+      <a href="login.html">Login</a> |
       <a href="userRegister.html">Register</a>
     </nav>
     <footer class="footer">© Aventones.com</footer>
     <script src="js/sessionGuard.js"></script>
+    <script src="js/globalFunctions.js"></script>
   </body>
 </html>
