--- a/editUserProfile.html
+++ b/editUserProfile.html
@@ -28,7 +28,7 @@
         <hr />
       </div>
 
-      <div class="form-body">
+      <form class="form-body" id="form-body">
         <div class="column-form">
           <div>
             <label for="first-name">First Name</label>
@@ -48,6 +48,7 @@
               id="email"
               placeholder="rodriguezjeremyinfj@gmail.com"
               class="column-form-inputs"
+              readonly
             />
           </div>
         </div>
@@ -106,7 +107,7 @@
           <a href="myRides.html" class="cancel">Cancel</a>
           <button type="submit" class="create-btn">Save</button>
         </div>
-      </div>
+      </form>
     </section>
 
     <hr />
