Se implemento que todas las paginas tengan dropdown-menu

--- a/bookings.html
+++ b/bookings.html
@@ -29,8 +29,9 @@
           </label>
           <input type="checkbox" id="toggle-menu" />
           <div class="dropdown-menu">
-            <a onclick="logout()" id="submenu-logout">Logout</a>
-            <a href="editProfile.html">Settings</a>
+            <a onclick="logout()" class="submenu-logout">Logout</a>
+            <a onclick="profileUserType()">Profile</a>
+            <a href="configuration.html">Configuration</a>
           </div>
         </div>
       </div>
