--- a/newRide.html
+++ b/newRide.html
@@ -27,7 +27,7 @@
           <input type="checkbox" id="toggle-menu" />
           <div class="dropdown-menu">
             <a onclick="logout()" class="submenu-logout">Logout</a>
-            <a href="editProfile.html">Profile</a>
+            <a onclick="profileUserType()">Profile</a>
             <a href="configuration.html">Configuration</a>
           </div>
         </div>
