--- a/rideDetails.html
+++ b/rideDetails.html
@@ -27,7 +27,8 @@
           <input type="checkbox" id="toggle-menu" />
           <div class="dropdown-menu">
             <a onclick="logout()" class="submenu-logout">Logout</a>
-            <a href="editProfile.html">Settings</a>
+            <a onclick="profileUserType()">Profile</a>
+            <a href="configuration.html">Configuration</a>
           </div>
         </div>
       </div>
