Se coloco y quito los llamados de clase de register(quitado) y userService(agregado)

--- a/editUserProfile.html
+++ b/editUserProfile.html
@@ -132,5 +132,6 @@
     <footer>© Aventones.com</footer>
     <script src="js/sessionGuard.js"></script>
     <script src="js/globalFunctions.js"></script>
+    <script src="js/userService.js"></script>
   </body>
 </html>
