--- a/userRegister.html
+++ b/userRegister.html
@@ -113,7 +113,7 @@
 
     <footer>© Aventones.com</footer>
 
-    <script src="js/register.js"></script>
+    <script src="js/userService.js"></script>
     <script src="js/globalFunctions.js"></script>
   </body>
 </html>
