--- a/driverRegister.html
+++ b/driverRegister.html
@@ -143,7 +143,7 @@
     </nav>
     <footer>© Aventones.com</footer>
 
-    <script src="js/register.js"></script>
+    <script src="js/userService.js"></script>
     <script src="js/rangeBoostrap.js"></script>
     <script src="js/globalFunctions.js"></script>
   </body>
