--- a/configuration.html
+++ b/configuration.html
@@ -38,7 +38,7 @@
         <h2>Configuration</h2>
         <hr />
       </div>
-      <div class="configuration-body">
+      <form class="configuration-body" id="configuration-form">
         <div class="configuration-options-first-part">
           <label for="public-name">Public Name</label>
           <input type="text" id="public-name" placeholder="Jeremy" />
@@ -53,7 +53,7 @@
           <a href="myRides.html" class="cancel">Cancel</a>
           <button type="submit" class="create-btn">Save</button>
         </div>
-      </div>
+      </form>
     </section>
 
     <hr />
@@ -67,5 +67,6 @@
     <footer class="footer">© Aventones.com</footer>
     <script src="js/sessionGuard.js"></script>
     <script src="js/globalFunctions.js"></script>
+    <script src="js/userService.js"></script>
   </body>
 </html>
