Se le agrego un id al navbar(rides) para poder ocultarlo mediante js a los usuarios

--- a/editDriverProfile.html
+++ b/editDriverProfile.html
@@ -13,7 +13,7 @@
     <section class="navbar">
       <div class="nav-left">
         <a href="searchRides.html" class="nav-link active">Home</a>
-        <a href="myRides.html" class="nav-link">Rides</a>
+        <a href="myRides.html" class="nav-link" id="rides-link">Rides</a>
         <a href="bookings.html" class="nav-link">Bookings</a>
       </div>
 
