--- a/bookings.html
+++ b/bookings.html
@@ -17,7 +17,7 @@
     <section class="navbar">
       <div class="nav-left">
         <a href="searchRides.html" class="nav-link">Home</a>
-        <a href="myRides.html" class="nav-link">Rides</a>
+        <a href="myRides.html" class="nav-link" id="rides-link">Rides</a>
         <a href="bookings.html" class="nav-link active">Bookings</a>
       </div>
 
