--- a/newRide.html
+++ b/newRide.html
@@ -14,7 +14,7 @@
     <section class="navbar">
       <div class="nav-left">
         <a href="searchRides.html" class="nav-link">Home</a>
-        <a href="myRides.html" class="nav-link active">Rides</a>
+        <a href="myRides.html" class="nav-link active" id="rides-link">Rides</a>
         <a href="bookings.html" class="nav-link">Bookings</a>
       </div>
 
