Se indento correctamente

--- a/searchRides.html
+++ b/searchRides.html
@@ -85,6 +85,7 @@
       <table class="rides-table" id="rides-table-search-rides">
         <thead>
           <tr>
+            <th class="ride-id">RideId</th>
             <th>Driver</th>
             <th>From</th>
             <th>To</th>
@@ -94,9 +95,7 @@
             <th>Actions</th>
           </tr>
         </thead>
-        <tbody id="search-rides-table">
-
-        </tbody>
+        <tbody id="search-rides-table"></tbody>
       </table>
 
       <div class="map-image">
