Departure y arrive ahora son select  en vez de inputs, ademas se ajusto el css al select

--- a/editRide.html
+++ b/editRide.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rides</title>
     <link rel="stylesheet" href="css/editRide.css" />
   </head>
   <body>
@@ -44,23 +44,23 @@
         <div class="form-group-left">
           <div>
             <label for="departure">Departure from</label>
-            <input
-              type="text"
-              id="departure"
-              name="departure"
-              placeholder="Quesada"
-              id="departure"
-            />
+            <select id="departure" name="from" class="places">
+              <option value="ciudad-quesada">Ciudad Quesada</option>
+              <option value="santa-rosa-pocosol">Santa Rosa de Pocosol</option>
+              <option value="aguas-zarcas">Aguas Zarcas</option>
+              <option value="puntarenas">Puntarenas</option>
+              <option value="santa-clara">Santa Clara</option>
+            </select>
           </div>
           <div>
-            <label for="arrival">Arrive To</label>
-            <input
-              type="text"
-              id="arrival"
-              name="arrival"
-              placeholder="Zarcero"
-              id="arrival"
-            />
+            <label for="arrival">Departure from</label>
+            <select id="arrival" name="from" class="places">
+              <option value="ciudad-quesada">Ciudad Quesada</option>
+              <option value="santa-rosa-pocosol">Santa Rosa de Pocosol</option>
+              <option value="aguas-zarcas">Aguas Zarcas</option>
+              <option value="puntarenas">Puntarenas</option>
+              <option value="santa-clara">Santa Clara</option>
+            </select>
           </div>
         </div>
 
