--- a/driverRegister.html
+++ b/driverRegister.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AVENTONES</title>
-    <link rel="stylesheet" href="css/register.css" />
+    <link rel="stylesheet" href="css/registerDriver.css" />
   </head>
   <body>
     <div class="page-container">
