Se idento la pagina searchRides y agrego un div a un <span> que se encontraba solo

--- a/searchRides.html
+++ b/searchRides.html
@@ -68,20 +68,72 @@
         <div class="form-group-days">
           <span>Days</span>
           <div>
-            <label><input type="checkbox" name="days" value="Mon" id="monday"/>Mon</label>
-            <label><input type="checkbox" name="days" value="Tue" id="tuesday"/>Tue</label>
-            <label><input type="checkbox" name="days" value="Wed" id="wednesday"/>Wed</label>
-            <label><input type="checkbox" name="days" value="Thu" id="thursday"/>Thu</label>
-            <label><input type="checkbox" name="days" value="Fri" id="friday"/>Fri</label>
-            <label><input type="checkbox" name="days" value="Sat" id="saturday"/>Sat</label>
-            <label><input type="checkbox" name="days" value="Sun" id="sunday"/>Sun</label>
+            <label
+              ><input
+                type="checkbox"
+                name="days"
+                value="Mon"
+                id="monday"
+              />Mon</label
+            >
+            <label
+              ><input
+                type="checkbox"
+                name="days"
+                value="Tue"
+                id="tuesday"
+              />Tue</label
+            >
+            <label
+              ><input
+                type="checkbox"
+                name="days"
+                value="Wed"
+                id="wednesday"
+              />Wed</label
+            >
+            <label
+              ><input
+                type="checkbox"
+                name="days"
+                value="Thu"
+                id="thursday"
+              />Thu</label
+            >
+            <label
+              ><input
+                type="checkbox"
+                name="days"
+                value="Fri"
+                id="friday"
+              />Fri</label
+            >
+            <label
+              ><input
+                type="checkbox"
+                name="days"
+                value="Sat"
+                id="saturday"
+              />Sat</label
+            >
+            <label
+              ><input
+                type="checkbox"
+                name="days"
+                value="Sun"
+                id="sunday"
+              />Sun</label
+            >
           </div>
         </div>
       </div>
-      <span
-        >Rides found from <span>Ciudad Quesada</span> to
-        <span>Santa Rosa de Pocosol</span></span
-      >
+      <div class="span-container">
+        <span
+          >Rides found from <span>Ciudad Quesada</span> to
+          <span>Santa Rosa de Pocosol</span></span
+        >
+      </div>
+
       <table class="rides-table" id="rides-table-search-rides">
         <thead>
           <tr>
